# RMySQL

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  INDEX  NAMESPACE  NEWS  NEWS.md  README.md  RMySQL.Rproj  appveyor.yml  config.cache  config.status  configure  configure.in  configure.win  readme.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: R-CMD-check.yaml
R/: .zzz.R.swp  Connection.R  DBI.R  Driver.R  Extensions.R  Makefile  MySQL.R  MySQLConnection.R  MySQLDriver.R  MySQLResult.R  MySQLSupport.R  RMySQL.R  RcppExports.R  Result.R  S4R.R  connect.R  connection.R  data-type.R  dbObjectId.R  default.R  deprecated.R  driver.R  escaping.R  extension.R  is-valid.R  mysql.R  query.R  quote.R  result.R  table.R  tables.R  tags  transaction.R  transactions.R  zzz.R  zzz.R~  zzz_compatibility.R
inst/: Copyrights  FindMySQLhome.R  INSTALL  INSTALL.win  NEWS  README  README.windows  THANKS  TODO  WindowsPath.txt  newFunctionNames.txt
inst/doc/: 00Index.dcf
inst/gnu/: README  getopt.h
man/: MySQL.Rd  MySQLConnection-class.Rd  MySQLDriver-class.Rd  MySQLObject-class.Rd  MySQLResult-class.Rd  RMySQL-package.Rd  RMySQL.Rd  S4R.Rd  constants.Rd  db-meta.Rd  dbApply-methods.Rd  dbApply.Rd  dbBuildTableDefinition.Rd  dbCallProc-methods.Rd  dbColumnInfo-MySQLConnection-method.Rd  dbCommit-MySQLConnection-method.Rd  dbCommit-methods.Rd  dbCommit.Rd  dbConnect-MySQLDriver-method.Rd  dbConnect-MySQLDriver.Rd  dbConnect-methods.Rd  dbDataType-MySQLConnection-ANY-method.Rd  dbDataType-MySQLConnection-method.Rd  dbDataType-MySQLDriver-ANY-method.Rd  dbDataType-MySQLDriver-method.Rd  dbDataType-MySQLObject-method.Rd  dbDataType-methods.Rd  dbDataType.Rd  dbDriver-methods.Rd  dbEscapeStrings-methods.Rd  dbEscapeStrings.Rd  dbGetInfo-MySQLDriver-method.Rd  dbGetInfo-methods.Rd  dbListTables-methods.Rd  dbNextResult-methods.Rd  dbNextResult.Rd  dbObjectId-class.Rd  dbQuoteIdentifer.Rd  dbQuoteIdentifier-MySQLConnection-character-method.Rd  dbReadTable-methods.Rd  (+28 more)
revdep/: summary.md
src/: Makefile  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  Makevars.win32  Makevars.win64  MyBinding.h  MyConnection.cpp  MyConnection.h  MyResult.h  MyRow.h  MyTypes.h  MyUtils.h  RMySQL-init.c  RMySQL-init.cpp  RMySQL_types.h  RS-DBI.c  RS-DBI.h  RS-MySQL.c  RS-MySQL.h  RcppExports.cpp  S4R.h  connection.c  connection.cpp  connnection.cpp  db-apply.c  driver.c  exception.c  fields.c  manager.c  next-DBI.c  next-DBI.h  next-MySQL.c  next-MySQL.h  result-cpp.cpp  result.c  result.cpp  tags  timegm.cpp  (+3 more)
src/win32/: timegm.c
tests/: tests.R  tests.Rout.save  testthat.R
tests/testthat/: helper-DBItest.R  test-DBItest.R  test-dbFetch.R  test-dbQuoteString.R  test-dbWriteTable.R  test-memory-management.R  test-queries.R  test-tables.R
tools/: winlibs.R
windows/libmariadbclient-2.1.0/: readme.txt
windows/libmariadbclient-2.1.0/include/: my_config.h  my_global.h
windows/mariadb-5.5/: readme.txt
windows/mariadb-5.5/include/: my_config.h
windows/mariadb-client-2.0/include/: mysql_version.h
